Fix overlapping css & Add Members explanation

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -671,6 +671,7 @@ a {
 		margin-top:8px;
 		display:flex;
 		flex-direction:row;
+		width: 100%;
 
 		.seminar-date {
 			flex:0 0 120px;
@@ -681,7 +682,7 @@ a {
 		}
 
 		.seminar-sublist {
-			flex: 1 0 auto;
+			flex: 1 1 auto;
 			.seminar-subitem {
 				margin-bottom: 8px;
 				padding-bottom: 12px;
